fix grid gap and change sticky header color

--- a/components/challenge/Categories/Categories.module.css
+++ b/components/challenge/Categories/Categories.module.css
@@ -4,7 +4,7 @@
 .widthContainer {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(min(320px, 100%), 1fr));
-  gap: 1rem;
+  gap: 3rem 1rem;
 }
 .item {
   min-width: 260px;
