--- a/components/challenge/ProductsGrid/ProductsGrid.module.css
+++ b/components/challenge/ProductsGrid/ProductsGrid.module.css
@@ -1,11 +1,5 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(min(260px, 100%), 1fr));
-  gap: 1rem;
-}
-
-@media (max-width: 48rem) {
-  .grid {
-    gap: 3rem;
-  }
+  gap: 3rem 1rem;
 }
