--- a/components/challenge/StickyBanner/StickyBanner.module.css
+++ b/components/challenge/StickyBanner/StickyBanner.module.css
@@ -6,7 +6,7 @@
   gap: 3rem;
   position: sticky;
   top: 0;
-  background-color: black;
+  background-color: var(--color);
   z-index: 2;
 }
 @media (max-width: 48rem) {
